# hf-storage

./: .gitignore  HFStorage.spec  LICENSE  PLATFORMS.md  README.md  desktop-README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: android-apk.yml  build-windows.yml
android/: README.md  STAGING-NOTE.md  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/apexlions/hfstorage/mobile/: HFStorageApplication.kt  MainActivity.kt
android/app/src/main/java/com/apexlions/hfstorage/mobile/data/: CommitRequestCanonicalizer.kt  HfApiClient.kt  Models.kt  TokenStore.kt  UploadDiagnostics.kt  UploadEngine.kt  UploadPlanning.kt  UploadQueue.kt  XetNative.kt
android/app/src/main/java/com/apexlions/hfstorage/mobile/ui/: AppScreens.kt  FileSelection.kt  FilesScreens.kt  HfStorageViewModel.kt  RepositoryDialogs.kt  Theme.kt
android/app/src/main/java/com/apexlions/hfstorage/mobile/worker/: UploadWorker.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: file_paths.xml
android/app/src/test/java/com/apexlions/hfstorage/mobile/data/: CommitRequestCanonicalizerTest.kt  UploadPlanningTest.kt
android/scripts/: prepare_rustls_platform_verifier.py
android/xet-native/: Cargo.toml
android/xet-native/src/: lib.rs
scripts/: generate_icon.py
src/hf_storage/: __init__.py  dashboard.py  dialogs.py  files_page.py  main.py  models.py  security.py  service.py  settings_pages.py  theme.py  upload_fix.py  window.py  window_actions.py  workers.py
tests/: test_models.py  test_upload_fix.py
