[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hf-storage"
version = "0.1.0"
description = "Professional Windows file manager for Hugging Face repositories"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.8,<7",
  "huggingface_hub>=1.23.0,<2",
  "hf-xet>=1.2.0",
]

[project.scripts]
hf-storage = "hf_storage.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
